[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/_global/MusicPlayer.gd" type="Script" id=1]
[ext_resource path="res://src/edited_sprites/setas/seta2Direita.png" type="Texture" id=2]
[ext_resource path="res://src/edited_sprites/setas/seta1Cima.png" type="Texture" id=3]
[ext_resource path="res://src/edited_sprites/setas/seta1Baixo.png" type="Texture" id=4]
[ext_resource path="res://src/edited_sprites/setas/seta1Direita.png" type="Texture" id=5]
[ext_resource path="res://src/edited_sprites/setas/seta2Esquerda.png" type="Texture" id=6]
[ext_resource path="res://src/musics/hyi - mind breaking the body - 02 you can recover.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/edited_sprites/setas/seta1Esquerda.png" type="Texture" id=8]
[ext_resource path="res://src/edited_sprites/setas/seta2Cima.png" type="Texture" id=9]
[ext_resource path="res://src/edited_sprites/setas/seta2Baixo.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.02594, 6.13101 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -6.22636, 3.21195, -6.22636, -2.87826, -1.05386, -2.96169, -1.13728, -4.88052, 2.03297, -4.96394, 6.45462, 0.0417061, 1.78268, 5.29764, -1.22071, 5.29764, -1.22071, 3.37881 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 6.01778, 3.17168, 5.93435, -2.66825, 0.59499, -2.75167, 0.678417, -4.67051, -1.57413, -4.67051, -6.07921, -0.081995, -1.74098, 4.92365, 0.59499, 5.00708, 0.761845, 3.17168 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -2.89959, 6.25849, 3.19062, 6.17507, 3.27405, 1.33627, 5.19288, 1.25284, 5.02603, -1.41684, 0.103806, -5.92192, -4.90184, -1.41684, -4.73499, 1.08599, -2.89959, 1.00256 )

[node name="MusicPlayer" type="Node2D"]
position = Vector2( 403.085, 133.247 )
script = ExtResource( 1 )
audio_stream = ExtResource( 7 )
autoplay = true

[node name="Sprites" type="Node2D" parent="."]
visible = false
position = Vector2( -358.065, -111.124 )

[node name="right" type="RigidBody2D" parent="Sprites"]
position = Vector2( 97.6469, -9.80992 )
collision_layer = 32
collision_mask = 0
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Sprites/right"]
modulate = Color( 0.0392157, 0.882353, 0.968627, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/right"]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprites/right"]
scale = Vector2( 2, 2 )
occluder = SubResource( 2 )

[node name="left" type="RigidBody2D" parent="Sprites"]
position = Vector2( 25.7522, -10.0199 )
collision_layer = 32
collision_mask = 0
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Sprites/left"]
modulate = Color( 0.988235, 0.262745, 0.0980392, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/left"]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprites/left"]
scale = Vector2( 2, 2 )
occluder = SubResource( 3 )

[node name="up" type="RigidBody2D" parent="Sprites"]
position = Vector2( 50.771, -10.0199 )
collision_layer = 32
collision_mask = 0
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Sprites/up"]
modulate = Color( 0.305882, 0.972549, 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/up"]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprites/up"]
scale = Vector2( 2, 2 )
occluder = SubResource( 4 )

[node name="down" type="RigidBody2D" parent="Sprites"]
position = Vector2( 50.771, -10.0199 )
collision_layer = 32
collision_mask = 0
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Sprites/down"]
modulate = Color( 1, 0.74902, 0.00392157, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/down"]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprites/down"]
scale = Vector2( 2, 2 )
occluder = SubResource( 4 )

[node name="NoteStart" type="Node2D" parent="."]

[node name="left" type="Position2D" parent="NoteStart"]
position = Vector2( 27.7433, -76.5406 )

[node name="up" type="Position2D" parent="NoteStart"]
position = Vector2( 91.7578, -75.9641 )

[node name="down" type="Position2D" parent="NoteStart"]
position = Vector2( 142.129, -74.3913 )

[node name="right" type="Position2D" parent="NoteStart"]
position = Vector2( 203.826, -75.6501 )

[node name="NoteEnd" type="Node2D" parent="."]

[node name="left" type="Position2D" parent="NoteEnd"]
position = Vector2( 34.1562, 401.684 )

[node name="up" type="Position2D" parent="NoteEnd"]
position = Vector2( 99.5446, 404.034 )

[node name="down" type="Position2D" parent="NoteEnd"]
position = Vector2( 150.622, 403.719 )

[node name="right" type="Position2D" parent="NoteEnd"]
position = Vector2( 210.376, 403.404 )

[node name="SpritesEnd" type="Node2D" parent="NoteEnd"]
position = Vector2( 43.215, 403.763 )
scale = Vector2( 2, 2 )

[node name="right" type="Area2D" parent="NoteEnd/SpritesEnd"]
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="NoteEnd/SpritesEnd/right"]
modulate = Color( 0.0392157, 0.882353, 0.968627, 1 )
position = Vector2( 83.1605, -0.271095 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteEnd/SpritesEnd/right"]
visible = false
position = Vector2( 83.0789, -0.0498047 )
shape = SubResource( 1 )

[node name="left" type="Area2D" parent="NoteEnd/SpritesEnd"]
position = Vector2( -4, 1 )
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="NoteEnd/SpritesEnd/left"]
modulate = Color( 0.988235, 0.262745, 0.0980392, 1 )
position = Vector2( -0.00744629, -1.8603 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteEnd/SpritesEnd/left"]
visible = false
position = Vector2( 0.411529, -1.19571 )
shape = SubResource( 1 )

[node name="up" type="Area2D" parent="NoteEnd/SpritesEnd"]
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="NoteEnd/SpritesEnd/up"]
modulate = Color( 0.305882, 0.972549, 0, 1 )
position = Vector2( 27.5386, -0.271095 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteEnd/SpritesEnd/up"]
visible = false
position = Vector2( 27.6239, 0.283905 )
shape = SubResource( 1 )

[node name="down" type="Area2D" parent="NoteEnd/SpritesEnd"]
collision_layer = 32
collision_mask = 32

[node name="Sprite" type="Sprite" parent="NoteEnd/SpritesEnd/down"]
modulate = Color( 1, 0.74902, 0.00392157, 1 )
position = Vector2( 54.0252, 0.258659 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteEnd/SpritesEnd/down"]
visible = false
position = Vector2( 54.1105, 0.47995 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="body_entered" from="NoteEnd/SpritesEnd/right" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="NoteEnd/SpritesEnd/right" to="." method="_on_right_body_exited"]
[connection signal="body_entered" from="NoteEnd/SpritesEnd/left" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="NoteEnd/SpritesEnd/left" to="." method="_on_left_body_exited"]
[connection signal="body_entered" from="NoteEnd/SpritesEnd/up" to="." method="_on_up_body_entered"]
[connection signal="body_exited" from="NoteEnd/SpritesEnd/up" to="." method="_on_up_body_exited"]
[connection signal="body_entered" from="NoteEnd/SpritesEnd/down" to="." method="_on_down_body_entered"]
[connection signal="body_exited" from="NoteEnd/SpritesEnd/down" to="." method="_on_down_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
